Fix some electron alignment and drag/drop

--- a/src/App.css
+++ b/src/App.css
@@ -47,10 +47,22 @@
 
 #waveform-container {
   border: 1px solid var(--mui-palette-primary-main);
+  border-radius: 4px;
   width: 100%;
-  height: 150px;
-  position: relative;
-  padding: 0;
+  min-height: 140px;
+  margin-bottom: 16px;
+  background-color: var(--mui-pallette-background-paper);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--mui-palette-text-secondary);
+  font-size: 14px;
+  transition: background-color 0.2s ease-in-out;
+
+  /* height: 165px; */
+  /* position: relative; */
+  /* padding: 0; */
+  /* scrollbar-width: thin; */
 }
 
 #transport-controls {
@@ -109,10 +121,10 @@
 
 /* #waveform-container ::part(marker) { */
   /* position: relative; */
-  /* width: 0px; */
-  /* height: 0px; */
-  /* left: -13px; */
-  /* top: -6px; */
+  /* height: 175px; */
+  /* top: 6px; */
+  /* width: 1px; */
+  /* left: 1px; */
 /* } */
 
 /* #waveform-container ::part(wrapper) {
